--- a/index.html
+++ b/index.html
@@ -14,12 +14,28 @@
 <body>
 	<div class="box">
 		<div class="data-box">
-			<p>나는!</p>
+			<p>Drag-box 1</p>
 		</div>
 		
 		<div class="data-box">
-			<p>병신이다!</p>
+			<p>Drag-box 2</p>
 		</div>
+
+		<div class="data-box">
+			<p>Drag-box 3</p>
+		</div>
+
+		<div class="data-box">
+			<p>Drag-box 4</p>
+		</div>
+
+		<div class="data-box">
+			<p>Drag-box 5</p>
+		</div>
+	</div>
+
+	<div class="drop-box">
+		<p>여기다 ㄱㄱ</p>
 	</div>
 
 	<div class="drop-box">
